--- a/socreport.bib
+++ b/socreport.bib
@@ -265,6 +265,19 @@
   url             = "https://doi.org/10.1007/BF02551274"
 }
 
+@ARTICLE{Lacey:2015,
+  AUTHOR          = {Lacey, S. and Sathian, K. },
+  TITLE           = {{C}rossmodal and multisensory interactions between vision
+                  and touch},
+  YEAR            = 2015,
+  JOURNAL         = {Scholarpedia},
+  VOLUME          = 10,
+  NUMBER          = 3,
+  PAGES           = 7957,
+  DOI             = {10.4249/scholarpedia.7957},
+  NOTE            = {revision \#150498}
+}
+
 @article{MAASS19971659,
   title           = "Networks of spiking neurons: The third generation of neural
                   network models",
@@ -343,6 +356,18 @@
   journal         = {Science}
 }
 
+@inproceedings{Mitrokhin2019,
+  Author          = {Mitrokhin, Anton and Ye, Chengxi and Fermuller, Cornelia
+                  and Aloimonos, Yiannis and Delbruck, Tobi},
+  Booktitle       = {2019 IEEE/RSJ International Conference on Intelligent
+                  Robots and Systems (IROS)},
+  Date-Added      = {2020-01-30 16:05:14 +0800},
+  Date-Modified   = {2020-01-30 16:05:31 +0800},
+  Title           = {{EV-IMO: Motion Segmentation Dataset and Learning Pipeline
+                  for Event Cameras}},
+  Year            = 2019
+}
+
 @incollection{NIPS2018_7415,
   title           = {SLAYER: Spike Layer Error Reassignment in Time},
   author          = {Shrestha, Sumit Bam and Orchard, Garrick},
@@ -381,6 +406,25 @@
   publisher       = {Curran Associates, Inc.},
   url             =
                   {http://papers.nips.cc/paper/7892-neural-ordinary-differential-equations.pdf}
+}
+
+@article{Rathi2018,
+  Author          = {N. {Rathi} and K. {Roy}},
+  Date-Added      = {2020-01-31 13:41:17 +0800},
+  Date-Modified   = {2020-01-31 13:41:30 +0800},
+  Doi             = {10.1109/TETCI.2018.2872014},
+  Issn            = {2471-285X},
+  Journal         = {IEEE Transactions on Emerging Topics in Computational
+                  Intelligence},
+  Keywords        = {Synapses;Biological neural networks;Timing;Hidden Markov
+                  models;Unsupervised learning;Multimodal Learning;Spiking
+                  Neural Network;Spike Timing Dependent Plasticity;Unsupervised
+                  Learning;Cross-modal Connections;Synergistic Learning},
+  Pages           = {1-11},
+  Title           = {STDP-Based Unsupervised Multimodal Learning With
+                  Cross-Modal Processing in Spiking Neural Network},
+  Year            = 2018,
+  Bdsk-Url-1      = {https://doi.org/10.1109/TETCI.2018.2872014}
 }
 
 @article{SHRESTHA201733,
@@ -635,6 +679,19 @@
   journal         = {Science Robotics}
 }
 
+@inproceedings{allenil_surfac,
+  author          = {P. Allen},
+  title           = {Surface descriptions from vision and touch},
+  booktitle       = {Proceedings. 1984 IEEE International Conference on Robotics
+                  and Automation},
+  year            = {nil},
+  pages           = {nil},
+  doi             = {10.1109/robot.1984.1087191},
+  url             = {https://doi.org/10.1109/robot.1984.1087191},
+  DATE_ADDED      = {Wed Mar 25 13:11:27 2020},
+  month           = {-},
+}
+
 @article{blouw18_bench_keywor_spott_effic_neurom_hardw,
   author          = {Blouw, Peter and Choo, Xuan and Hunsberger, Eric and
                   Eliasmith, Chris},
@@ -661,6 +718,32 @@
   archivePrefix   = {arXiv},
   eprint          = {1812.01739},
   primaryClass    = {cs.LG},
+}
+
+@article{calandra2018more,
+  title           = {More than a feeling: Learning to grasp and regrasp using
+                  vision and touch},
+  author          = {Calandra, Roberto and Owens, Andrew and Jayaraman, Dinesh
+                  and Lin, Justin and Yuan, Wenzhen and Malik, Jitendra and
+                  Adelson, Edward H and Levine, Sergey},
+  journal         = {IEEE Robotics and Automation Letters},
+  volume          = 3,
+  number          = 4,
+  pages           = {3300--3307},
+  year            = 2018,
+  publisher       = {IEEE}
+}
+
+@inproceedings{chevallier2005distributed,
+  Author          = {Chevallier, Sylvain and Paugam-Moisy, H{\'e}l{\`e}ne and
+                  Lema{\^\i}tre, Fran{\c{c}}ois},
+  Booktitle       = {Parallel and Distributed Computing and Networks},
+  Date-Added      = {2020-01-31 13:47:15 +0800},
+  Date-Modified   = {2020-01-31 13:47:15 +0800},
+  Pages           = {393--398},
+  Title           = {Distributed Processing for Modelling Real-Time Multimodal
+                  Perception in a Virtual Robot.},
+  Year            = 2005
 }
 
 @article{comsa19_tempor_codin_spikin_neural_networ,
@@ -1008,6 +1091,32 @@
   doi             = { 10.25080/shinma-7f4c6e7-008 }
 }
 
+@inproceedings{lee2019making,
+  title           = {Making sense of vision and touch: Self-supervised learning
+                  of multimodal representations for contact-rich tasks},
+  author          = {Lee, Michelle A and Zhu, Yuke and Srinivasan, Krishnan and
+                  Shah, Parth and Savarese, Silvio and Fei-Fei, Li and Garg,
+                  Animesh and Bohg, Jeannette},
+  booktitle       = {2019 International Conference on Robotics and Automation
+                  (ICRA)},
+  pages           = {8943--8950},
+  year            = 2019,
+  organization    = {IEEE}
+}
+
+@inproceedings{lee2019making,
+  title           = {Making sense of vision and touch: Self-supervised learning
+                  of multimodal representations for contact-rich tasks},
+  author          = {Lee, Michelle A and Zhu, Yuke and Srinivasan, Krishnan and
+                  Shah, Parth and Savarese, Silvio and Fei-Fei, Li and Garg,
+                  Animesh and Bohg, Jeannette},
+  booktitle       = {2019 International Conference on Robotics and Automation
+                  (ICRA)},
+  pages           = {8943--8950},
+  year            = 2019,
+  organization    = {IEEE}
+}
+
 @article{legenstein08_learn_theor_rewar_modul_spike,
   author          = {Robert Legenstein and Dejan Pecevski and Wolfgang Maass},
   title           = {A Learning Theory for Reward-Modulated
@@ -1064,6 +1173,20 @@
   primaryClass    = {cs.LG},
 }
 
+@inproceedings{li18_slip_detec_combin_tactil_visual_infor,
+  author          = {Jianhua Li and Siyuan Dong and Edward Adelson},
+  title           = {Slip Detection with Combined Tactile and Visual
+                  Information},
+  booktitle       = {2018 IEEE International Conference on Robotics and
+                  Automation (ICRA)},
+  year            = 2018,
+  pages           = {nil},
+  doi             = {10.1109/icra.2018.8460495},
+  url             = {https://doi.org/10.1109/icra.2018.8460495},
+  DATE_ADDED      = {Wed Mar 25 14:14:55 2020},
+  month           = 5,
+}
+
 @INPROCEEDINGS{li2016energyefficiency,
   author          = {D. {Li} and X. {Chen} and M. {Becchi} and Z. {Zong}},
   booktitle       = {2016 IEEE International Conferences on Big Data and Cloud
@@ -1085,6 +1208,68 @@
   doi             = {10.1109/BDCloud-SocialCom-SustainCom.2016.76},
   ISSN            = {null},
   month           = {Oct},
+}
+
+@inproceedings{lin2019learning,
+  title           = {Learning to identify object instances by touch: Tactile
+                  recognition via multimodal matching},
+  author          = {Lin, Justin and Calandra, Roberto and Levine, Sergey},
+  booktitle       = {2019 International Conference on Robotics and Automation
+                  (ICRA)},
+  pages           = {3644--3650},
+  year            = 2019,
+  organization    = {IEEE}
+}
+
+@book{liu18_robot_tactil_percep_under,
+  author          = {Huaping Liu and Fuchun Sun},
+  title           = {Robotic Tactile Perception and Understanding},
+  year            = 2018,
+  publisher       = {Springer Singapore},
+  url             = {https://doi.org/10.1007/978-981-10-6171-4},
+  DATE_ADDED      = {Wed Mar 25 15:06:12 2020},
+  doi             = {10.1007/978-981-10-6171-4},
+  pages           = {nil},
+  series          = {[]},
+}
+
+@article{liu2016visual,
+  title           = {Visual--tactile fusion for object recognition},
+  author          = {Liu, Huaping and Yu, Yuanlong and Sun, Fuchun and Gu,
+                  Jason},
+  journal         = {IEEE Transactions on Automation Science and Engineering},
+  volume          = 14,
+  number          = 2,
+  pages           = {996--1008},
+  year            = 2016,
+  publisher       = {IEEE}
+}
+
+@inproceedings{mansouri2019speech,
+  Author          = {Mansouri-Benssassi, Esma and Ye, Juan},
+  Booktitle       = {2019 International Joint Conference on Neural Networks
+                  (IJCNN)},
+  Date-Added      = {2020-01-31 13:47:56 +0800},
+  Date-Modified   = {2020-01-31 13:47:56 +0800},
+  Organization    = {IEEE},
+  Pages           = {1--8},
+  Title           = {Speech Emotion Recognition With Early Visual Cross-modal
+                  Enhancement Using Spiking Neural Networks},
+  Year            = 2019
+}
+
+@inproceedings{maqueda2018event,
+  Author          = {Maqueda, Ana I and Loquercio, Antonio and Gallego,
+                  Guillermo and Garc$\backslash$'$\backslash$ia, Narciso and
+                  Scaramuzza, Davide},
+  Booktitle       = {Proceedings of the IEEE Conference on Computer Vision and
+                  Pattern Recognition},
+  Date-Added      = {2020-01-30 16:06:07 +0800},
+  Date-Modified   = {2020-01-30 16:06:07 +0800},
+  Pages           = {5419--5427},
+  Title           = {{Event-based vision meets deep learning on steering
+                  prediction for self-driving cars}},
+  Year            = 2018
 }
 
 @inproceedings{meier2016tactile,
@@ -1226,6 +1411,19 @@
                   Equilibrium propagation.}
 }
 
+@inproceedings{reinecke2014experimental,
+  title           = {Experimental comparison of slip detection strategies by
+                  tactile sensing with the BioTac{\textregistered} on the DLR
+                  hand arm system},
+  author          = {Reinecke, Jens and Dietrich, Alexander and Schmidt, Florian
+                  and Chalon, Maxime},
+  booktitle       = {2014 IEEE international Conference on Robotics and
+                  Automation (ICRA)},
+  pages           = {2742--2748},
+  year            = 2014,
+  organization    = {IEEE}
+}
+
 @article{rueckauer16_theor_tools_conver_analog_to,
   author          = {Rueckauer, Bodo and Lungu, Iulia-Alexandra and Hu, Yuhuang
                   and Pfeiffer, Michael},
@@ -1274,6 +1472,31 @@
   DATE_ADDED      = {Mon Sep 30 11:08:34 2019},
 }
 
+@article{shan2017robotic,
+  title           = {Robotic tactile perception of object properties: A review},
+  author          = {Luo, Shan and Bimbo, Joao and Dahiya, Ravinder and Liu,
+                  Hongbin},
+  journal         = {Mechatronics},
+  volume          = 48,
+  pages           = {54--67},
+  year            = 2017,
+  publisher       = {Elsevier}
+}
+
+@inproceedings{sinapov14_learn,
+  author          = {Jivko Sinapov and Connor Schenck and Alexander Stoytchev},
+  title           = {Learning relational object categories using behavioral
+                  exploration and multimodal perception},
+  booktitle       = {2014 IEEE International Conference on Robotics and
+                  Automation (ICRA)},
+  year            = 2014,
+  pages           = {nil},
+  doi             = {10.1109/icra.2014.6907696},
+  url             = {https://doi.org/10.1109/icra.2014.6907696},
+  DATE_ADDED      = {Wed Mar 25 13:18:10 2020},
+  month           = 5,
+}
+
 @inproceedings{spikeprop,
   author          = {Bohte, Sander and Kok, Joost and Poutré, Johannes},
   year            = 2000,
@@ -1309,6 +1532,19 @@
   doi             = {10.1088/0954-898x_7_4_005},
   url             = {https://doi.org/10.1088/0954-898x_7_4_005},
   DATE_ADDED      = {Sat Nov 2 19:32:20 2019},
+}
+
+@inproceedings{su2015force,
+  title           = {Force estimation and slip detection/classification for grip
+                  control using a biomimetic tactile sensor},
+  author          = {Su, Zhe and Hausman, Karol and Chebotar, Yevgen and
+                  Molchanov, Artem and Loeb, Gerald E and Sukhatme, Gaurav S and
+                  Schaal, Stefan},
+  booktitle       = {2015 IEEE-RAS 15th International Conference on Humanoid
+                  Robots (Humanoids)},
+  pages           = {297--303},
+  year            = 2015,
+  organization    = {IEEE}
 }
 
 @article{such17_deep_neuroev,
@@ -1417,6 +1653,25 @@
   DATE_ADDED      = {Fri Nov 1 16:00:33 2019},
 }
 
+@techreport{Gallego2018,
+Archiveprefix = {arXiv},
+Arxivid = {arXiv:1904.08405v1},
+Author = {Gallego, Guillermo and Delbr, Tobi and Orchard, Garrick and Bartolozzi, Chiara and Taba, Brian and Censi, Andrea and Daniilidis, Kostas and Scaramuzza, Davide and Leutenegger, Stefan and Davison, Andrew},
+Date-Added = {2020-01-30 15:56:57 +0800},
+Date-Modified = {2020-01-30 15:56:57 +0800},
+Eprint = {arXiv:1904.08405v1},
+Pages = {1--25},
+Title = {{Event-based Vision : A Survey}},
+Year = {2018}
+}
+
+@inproceedings{varley2017visual,
+  title           = {Visual-tactile geometric reasoning},
+  author          = {Varley, Jacob and Watkins, David and Allen, Peter},
+  booktitle       = {RSS Workshop},
+  year            = 2017
+}
+
 @article{victor05_spike_train_metric,
   author          = {Jonathan D Victor},
   title           = {Spike Train Metrics},
@@ -1428,6 +1683,44 @@
   doi             = {10.1016/j.conb.2005.08.002},
   url             = {https://doi.org/10.1016/j.conb.2005.08.002},
   DATE_ADDED      = {Mon Mar 23 21:36:50 2020},
+}
+
+@article{ycb2015,
+  Author          = {B. {Calli} and A. {Walsman} and A. {Singh} and S.
+                  {Srinivasa} and P. {Abbeel} and A. M. {Dollar}},
+  Doi             = {10.1109/MRA.2015.2448951},
+  Issn            = {1558-223X},
+  Journal         = {IEEE Robotics Automation Magazine},
+  Keywords        = {benchmark testing;learning (artificial
+                  intelligence);planning (artificial
+                  intelligence);robots;benchmarking;Yale-CMU-Berkeley object
+                  set;Yale-CMU-Berkeley model set;robotic manipulation
+                  research;manipulation tests;associated
+                  database;high-resolution red green blue plus depth scans;RGB-D
+                  scans;physical properties;geometric models;planning software
+                  platforms;learning;mechanical design;Benchmark
+                  testing;Robots;Data models;Object detection;Solid
+                  modeling;Databases;Prosthetics},
+  Month           = {Sep.},
+  Number          = 3,
+  Pages           = {36-52},
+  Title           = {Benchmarking in Manipulation Research: Using the
+                  Yale-CMU-Berkeley Object and Model Set},
+  Volume          = 22,
+  Year            = 2015,
+  Bdsk-Url-1      = {https://doi.org/10.1109/MRA.2015.2448951}
+}
+
+@article{yuan2017gelsight,
+  title           = {Gelsight: High-resolution robot tactile sensors for
+                  estimating geometry and force},
+  author          = {Yuan, Wenzhen and Dong, Siyuan and Adelson, Edward H},
+  journal         = {Sensors},
+  volume          = 17,
+  number          = 12,
+  pages           = 2762,
+  year            = 2017,
+  publisher       = {Multidisciplinary Digital Publishing Institute}
 }
 
 @article{zambrano16_fast_effic_async_neural_comput,
@@ -1503,4 +1796,14 @@
   archivePrefix   = {arXiv},
   eprint          = {1705.11146},
   primaryClass    = {q-bio.NC},
+}
+
+@inproceedings{zhu2018ev,
+  Author          = {Zhu, Alex Zihao and Yuan, Liangzhe},
+  Booktitle       = {Robotics: Science and Systems},
+  Date-Added      = {2020-01-30 16:00:27 +0800},
+  Date-Modified   = {2020-01-30 16:00:27 +0800},
+  Title           = {{EV-FlowNet: Self-Supervised Optical Flow Estimation for
+                  Event-based Cameras}},
+  Year            = 2018
 }
