--- a/socreport.bib
+++ b/socreport.bib
@@ -746,6 +746,17 @@
   Year            = 2005
 }
 
+@article{coleman2014reducing,
+  Author          = {Coleman, David and Sucan, Ioan and Chitta, Sachin and
+                  Correll, Nikolaus},
+  Date-Added      = {2020-01-31 17:40:04 +0800},
+  Date-Modified   = {2020-01-31 17:40:04 +0800},
+  Journal         = {arXiv preprint arXiv:1404.3785},
+  Title           = {Reducing the barrier to entry of complex robotic software:
+                  a moveit! case study},
+  Year            = 2014
+}
+
 @article{comsa19_tempor_codin_spikin_neural_networ,
   author          = {Comsa, Iulia M. and Potempa, Krzysztof and Versari, Luca
                   and Fischbacher, Thomas and Gesmundo, Andrea and Alakuijala,
@@ -1640,6 +1651,18 @@
   doi             = {10.3389/fnins.2016.00508}
 }
 
+@techreport{Gallego2018,
+Archiveprefix = {arXiv},
+Arxivid = {arXiv:1904.08405v1},
+Author = {Gallego, Guillermo and Delbr, Tobi and Orchard, Garrick and Bartolozzi, Chiara and Taba, Brian and Censi, Andrea and Daniilidis, Kostas and Scaramuzza, Davide and Leutenegger, Stefan and Davison, Andrew},
+Date-Added = {2020-01-30 15:56:57 +0800},
+Date-Modified = {2020-01-30 15:56:57 +0800},
+Eprint = {arXiv:1904.08405v1},
+Pages = {1--25},
+Title = {{Event-based Vision : A Survey}},
+Year = {2018}
+}
+
 @article{urbanczik09_gradien_learn_rule_tempot,
   author          = {Robert Urbanczik and Walter Senn},
   title           = {A Gradient Learning Rule for the Tempotron},
@@ -1651,18 +1674,6 @@
   doi             = {10.1162/neco.2008.09-07-605},
   url             = {https://doi.org/10.1162/neco.2008.09-07-605},
   DATE_ADDED      = {Fri Nov 1 16:00:33 2019},
-}
-
-@techreport{Gallego2018,
-Archiveprefix = {arXiv},
-Arxivid = {arXiv:1904.08405v1},
-Author = {Gallego, Guillermo and Delbr, Tobi and Orchard, Garrick and Bartolozzi, Chiara and Taba, Brian and Censi, Andrea and Daniilidis, Kostas and Scaramuzza, Davide and Leutenegger, Stefan and Davison, Andrew},
-Date-Added = {2020-01-30 15:56:57 +0800},
-Date-Modified = {2020-01-30 15:56:57 +0800},
-Eprint = {arXiv:1904.08405v1},
-Pages = {1--25},
-Title = {{Event-based Vision : A Survey}},
-Year = {2018}
 }
 
 @inproceedings{varley2017visual,
