--- a/socreport.bib
+++ b/socreport.bib
@@ -1294,6 +1294,15 @@
   organization    = {Springer}
 }
 
+@article{mnih2013playing,
+  title           = {Playing atari with deep reinforcement learning},
+  author          = {Mnih, Volodymyr and Kavukcuoglu, Koray and Silver, David
+                  and Graves, Alex and Antonoglou, Ioannis and Wierstra, Daan
+                  and Riedmiller, Martin},
+  journal         = {arXiv preprint arXiv:1312.5602},
+  year            = 2013
+}
+
 @article{morris81_voltag_oscil_barnac_giant_muscl_fiber,
   author          = {C. Morris and H. Lecar},
   title           = {Voltage Oscillations in the Barnacle Giant Muscle Fiber},
@@ -1483,6 +1492,15 @@
   DATE_ADDED      = {Mon Sep 30 11:08:34 2019},
 }
 
+@article{schulman2015high,
+  title           = {High-dimensional continuous control using generalized
+                  advantage estimation},
+  author          = {Schulman, John and Moritz, Philipp and Levine, Sergey and
+                  Jordan, Michael and Abbeel, Pieter},
+  journal         = {arXiv preprint arXiv:1506.02438},
+  year            = 2015
+}
+
 @article{shan2017robotic,
   title           = {Robotic tactile perception of object properties: A review},
   author          = {Luo, Shan and Bimbo, Joao and Dahiya, Ravinder and Liu,
@@ -1629,6 +1647,18 @@
   DATE_ADDED      = {Sun Mar 22 12:30:30 2020},
 }
 
+@techreport{Gallego2018,
+Archiveprefix = {arXiv},
+Arxivid = {arXiv:1904.08405v1},
+Author = {Gallego, Guillermo and Delbr, Tobi and Orchard, Garrick and Bartolozzi, Chiara and Taba, Brian and Censi, Andrea and Daniilidis, Kostas and Scaramuzza, Davide and Leutenegger, Stefan and Davison, Andrew},
+Date-Added = {2020-01-30 15:56:57 +0800},
+Date-Modified = {2020-01-30 15:56:57 +0800},
+Eprint = {arXiv:1904.08405v1},
+Pages = {1--25},
+Title = {{Event-based Vision : A Survey}},
+Year = {2018}
+}
+
 @article{thorpe2001spike,
   title           = {Spike-based strategies for rapid processing},
   author          = {Thorpe, Simon and Delorme, Arnaud and Van Rullen, Rufin},
@@ -1649,18 +1679,6 @@
   volume          = 10,
   journal         = {Frontiers in Neuroscience},
   doi             = {10.3389/fnins.2016.00508}
-}
-
-@techreport{Gallego2018,
-Archiveprefix = {arXiv},
-Arxivid = {arXiv:1904.08405v1},
-Author = {Gallego, Guillermo and Delbr, Tobi and Orchard, Garrick and Bartolozzi, Chiara and Taba, Brian and Censi, Andrea and Daniilidis, Kostas and Scaramuzza, Davide and Leutenegger, Stefan and Davison, Andrew},
-Date-Added = {2020-01-30 15:56:57 +0800},
-Date-Modified = {2020-01-30 15:56:57 +0800},
-Eprint = {arXiv:1904.08405v1},
-Pages = {1--25},
-Title = {{Event-based Vision : A Survey}},
-Year = {2018}
 }
 
 @article{urbanczik09_gradien_learn_rule_tempot,
@@ -1807,6 +1825,13 @@ Year = {2018}
   archivePrefix   = {arXiv},
   eprint          = {1705.11146},
   primaryClass    = {q-bio.NC},
+}
+
+@phdthesis{schulman2016optimizing,
+  title={Optimizing expectations: From deep reinforcement learning to stochastic computation graphs},
+  author={Schulman, John},
+  year={2016},
+  school={UC Berkeley}
 }
 
 @inproceedings{zhu2018ev,
